[package]
name = "ansible-deployer"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["tracing", "json"] }
serde = {version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["rt-multi-thread", "tracing"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
